add callback info

--- a/src/demo/App.scss
+++ b/src/demo/App.scss
@@ -1,8 +1,8 @@
-body{
+body {
     background: #f3f3f3;
 }
 
-.info_box{
+.info_box {
     margin-bottom: 30px;
 }
 
@@ -13,4 +13,11 @@ body{
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.cb_wrapper {
+    background: white;
+    border: 2px solid #e2e2e2;
+    margin-top: 40px;
+    padding: 10px;
 }
