--- a/src/demo/App.scss
+++ b/src/demo/App.scss
@@ -20,4 +20,7 @@ body {
     border: 2px solid #e2e2e2;
     margin-top: 40px;
     padding: 10px;
+    .section{
+        margin-bottom: 10px;
+    }
 }
