--- a/public/bundle.css
+++ b/public/bundle.css
@@ -12,4 +12,13 @@ body {
   margin-left: auto;
   margin-right: auto; }
 
+.cb_wrapper {
+  background: white;
+  border: 2px solid #e2e2e2;
+  margin-top: 40px;
+  padding: 10px;
+  overflow: auto; }
+  .cb_wrapper .section {
+    margin-bottom: 10px; }
+
 /*# sourceMappingURL=../false/bundle.css.map */
