--- a/src/demo/App.scss
+++ b/src/demo/App.scss
@@ -20,6 +20,7 @@ body {
     border: 2px solid #e2e2e2;
     margin-top: 40px;
     padding: 10px;
+    overflow: auto;
     .section{
         margin-bottom: 10px;
     }
